# PLVO-Note

./: CMakeLists.txt  readme.txt
app/: imagesStVO.cpp
config/: scene_config.ini
config/config/: config_euroc.yaml
documents/: CMakeLists.txt  CMakeLists_备份.txt  stvo代码总结.pptx
include/: auxiliar.h  config.h  dataset.h  gridStructure.h  matching.h  pinholeStereoCamera.h  sceneRepresentation.h  stereoFeatures.h  stereoFrame.h  stereoFrameHandler.h  timer.h
src/: auxiliar.cpp  config.cpp  dataset.cpp  gridStructure.cpp  lineIterator.cpp  matching.cpp  pinholeStereoCamera.cpp  sceneRepresentation.cpp  stereoFrame.cpp  stereoFrameHandler.cpp  timer.cpp
